<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab3_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.main.Tab3">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:prompt="@string/select_feeling"
        android:spinnerMode="dialog" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="315dp"
        android:layout_height="297dp"
        android:background="@drawable/polaroid_frame">

        <ImageView
            android:id="@+id/picAdded"
            android:layout_width="279dp"
            android:layout_height="218dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:background="@color/black"
            android:contentDescription="@string/pic"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/add_diary_fragment"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/bubbler_one"
            android:gravity="start|top"
            android:hint="@string/write_diary"
            android:inputType="textMultiLine"
            android:scaleType="fitCenter"
            android:windowSoftInputMode="adjustPan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picAdded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/mood_edit_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        android:text="@string/mood_edit" />

</LinearLayout>