<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context="com.example.firstproject.ui.main.ContactDetailsFragment">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="210dp"
        android:layout_height="145dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/profile_pic"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/nickname_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/name_fragment"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/phone_num_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/phone_num_description"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/nickname_fragment"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/phone_num_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/phone_num_desc"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/email_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/email_description"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/phone_num_fragment"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/email_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/email_desc"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>